1.0.4:
	- Prompt user to resolve duplicated files
	- Update bibutils to 3.31
	- Generate thumbnails for files on NFS mounts
	- Improved internationalization support
	- Prevent search box getting hidden in small windows
	- Ability to paste bibtex
	- Ability to copy \cite{keys}

1.0.3:
	- Option to export unicode bibtex
	- Implement "Manage BibTeX File"
	- Support new arXiv id format
	- Stop reading document if DOI/Arxiv is found on first page
	- Fix setting dirtyness of library in "Rename from Key" (Jordy Potman)
	- Reduce window clutter (Kai Willadsen)
	- Italian translation (Michele Mattioni)
	- Improve translatability of code (Kai Willadsen)
	- Intltool fixes (Eric Lesh)
	- Fix(?) taglist corruption bug
	- Use poppler glib bindings (Kai Willadsen)
	- Start using ucompose.hpp for string composition
	- Compile against mt-only boost_regex (Damien Thébault)
	- Fix "All files" filter to be * instead of *.*
	- Support InProceedings crossref records
	- RPM spec file (Davyd Madeley)
	- Add texttrademark unicode->latex
	- Make configure fail properly when boost_regex is absent (Aiden Delaney)
	- Fix handling of escape key in dialogs

1.0.2:
	- Handle "Digital Object Identifier 10.1109..." (Jordy Potman)
	- Handle CDATA enclosure of titles (Jordy Potman)
	- Escape ampersands in bibtex export
	- Options for setting gnome proxy in Preferences
	- Fix thumbnail sizing bug
	- Special case for getting dois like "doi: blah/blah, more text" to 
		ignore trailing comma.
	- Add progress dialog when loading library
	- Improved keyboard behaviour in main window and in document properties
	- Fix 'remove' failing with duplicate keys
	- Add "Delete File from Drive"
	- Add "Rename File to Key"
	- Add/fix some accelerators
	- Fix ./configure failing on Ubuntu 6.06
	- Add option to enclose all values in {} when exporting bibtex
	- Fix crash opening files which no longer exist (Andreas Dalsgaard)
	- Fix saving broken to FS away from $HOME (Andreas Dalsgaard)

1.0.1: